--- a/index.html
+++ b/index.html
@@ -198,18 +198,23 @@ body{
           <button class="tile level" style="padding:8px 12px" onclick="closeOverlay('playOverlay')">Close</button>
         </div>
         <div class="row" style="gap:10px">
-          <div class="tile level" style="flex:1; min-height:68px" onclick="openSnake()">
-            <div><div style="font-weight:800">Snake</div><div class="note">9:16 • on-screen arrows</div></div>
-          </div>
-          <div class="tile level" style="flex:1; min-height:68px" onclick="openTetris()">
-            <div><div style="font-weight:800">Tetris</div><div class="note">10×20 pit • 9:16 shell • on-screen controls</div></div>
-          </div>
-          <div class="tile level" style="flex:1; min-height:68px" onclick="openFlappy()">
-            <div><div style="font-weight:800">Flappy Bird</div><div class="note">Tap to flap • pass gaps for chads</div></div>
-          </div>
-          <div class="tile level" style="flex:1; min-height:68px" onclick="openVertical()">
-            <div><div style="font-weight:800">Vertical Jumper</div><div class="note">Doodle-style • coins → chads</div></div>
-          </div>
+  <div class="tile level" style="flex:1; min-height:68px" onclick="openSnake()">
+    <div><div style="font-weight:800">Snake</div></div>
+  </div>
+  <div class="tile level" style="flex:1; min-height:68px" onclick="openTetris()">
+    <div><div style="font-weight:800">Tetris</div></div>
+  </div>
+  <div class="tile level" style="flex:1; min-height:68px" onclick="openFlappy()">
+    <div><div style="font-weight:800">Flappy Bird</div></div>
+  </div>
+  <div class="tile level" style="flex:1; min-height:68px" onclick="openVertical()">
+    <div><div style="font-weight:800">Vertical Jumper</div></div>
+  </div>
+  <div class="tile level" style="flex:1; min-height:68px" onclick="openHexagon()">
+    <div><div style="font-weight:800">Hexagon</div></div>
+  </div>
+</div>
+
         </div>
       </div>
     </div>
