--- a/index.html
+++ b/index.html
@@ -43,9 +43,17 @@ body{
   background: radial-gradient(600px 300px at -10% -20%, rgba(100,180,255,.07), transparent 35%), linear-gradient(180deg,#0b1218,#0a0e12);
   border:1px solid var(--glass); box-shadow:0 10px 30px rgba(0,0,0,.45), inset 0 1px 0 rgba(255,255,255,.04);
 }
-.avatar{ width:56px; height:56px; border-radius:14px; overflow:hidden; display:grid; place-items:center; font-weight:900; font-size:12px; color:#061018; flex:0 0 auto;
-  background: conic-gradient(from 220deg, #8bd3ff, #6ec8ff, #a8e0ff); box-shadow:inset 0 0 0 1px rgba(255,255,255,.4);
+/* avatar (no blue halo) */
+.avatar{
+  width:56px; height:56px;
+  border-radius:12px;         /* square-ish tile, like your screenshot */
+  overflow:hidden; display:grid; place-items:center;
+  font-weight:900; font-size:12px; color:#061018; flex:0 0 auto;
+  background:none;            /* was: conic-gradient(...) */
+  box-shadow:none;            /* remove inner ring */
+  border:1px solid rgba(255,255,255,0.08); /* very subtle border */
 }
+
 .avatar img{width:100%; height:100%; object-fit:cover; display:block}
 .userpill .name{ font-weight:800; letter-spacing:.2px; max-width:160px; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
 .stat{ background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01)); padding:8px 12px; border-radius:10px; border:1px solid var(--glass); min-width:140px; text-align:right; box-shadow:0 12px 30px rgba(0,0,0,0.6) }
